# nucleus

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.cmd  build.sh  nucleus.conf  nucleus.sh  sonar-project.properties
.github/workflows/: main.yml  nucleus-linux.yml  nucleus-win64.yml
app/: Customers.cpp  Customers.hpp  MyApp.cpp  MyApp.hpp
app/test/: MyApp.postman_collection.json
cmake/: install.cmake  package.cmake  utils.cmake
doc/: README.md  main.Doxyfile.in
examples/1-hello_world/: HelloWorld.cpp  HelloWorld.hpp  MyApp.cpp  MyApp.hpp  main.cpp
examples/1-hello_world/test/: CMakeLists.txt  Nucleus.postman_collection.json
examples/1-hello_world/test/hello_world/: test.py
examples/2-subclass/: 2-subclass.service  Customers.cpp  Customers.hpp  MyApp.cpp  MyApp.hpp  Subclass.cpp  Subclass.hpp  main.cpp
examples/2-subclass/share/: README.md
examples/2-subclass/test/: CMakeLists.txt
examples/3-segvec/: Basebench.cpp  Basebench.hpp  Segvec.cpp  Segvec.hpp  Subclass.cpp  Subclass.hpp  main.cpp
ext/: README.md  dup_dist_filter_sink.h  ini.cpp
ext/fmt/: format.h
ext/restinio/: compiler_features.hpp
share/: README.md
src/: AppManager.cpp  AppManager.hpp  Auth.cpp  Auth.hpp  Config.cpp  Config.hpp  Logging.cpp  Logging.hpp  Nucleus.cpp  Nucleus.hpp  Platform.hpp  PoolManager.cpp  PoolManager.hpp  RestRouter.cpp  RestRouter.hpp  RestServer.cpp  RestServer.hpp  Utilities.cpp  Utilities.hpp
src/lib/: README.md  ini.cpp
src/lib/restinio/: http_server_run.hpp
src/lib/spdlog/: async_logger.h  formatter.h  logger.h
src/lib/spdlog/details/: os.h
src/lib/spdlog/fmt/: fmt.h  ostr.h
test/: CMakeLists.txt  start_background.ps1  start_background.sh  start_foreground.sh  test_case_helpers.cmake  test_case_helpers.py  test_framework_helpers.cmake  valgrind.sh  wrk.sh
test/api_basic_nucleus/: test.py
test/api_ready/: test.cmake
test/config/: test.cpp
test/fixture-setup-ldap/: test.cmake
test/fixture_coverage_finalise/: run_gcov.sh  test.cmake
test/fixture_start_server/: start_background.sh  test.cmake
test/fixture_stop_server/: test.cmake
test/hello_world/: test.py
test/invalid_arguments/: nucleus-error.conf  nucleus.conf  test.cmake
test/start_interrupt/: start_background.sh  test.cmake
test/start_stop/: test.cmake
test/subclass/: test.py
util/: LICENSE.colon.header  LICENSE.hash.header  LICENSE.slash.header  LICENSE.txt.header  build-pmdk.sh  env.sh  git-detect.sh  install-pmdk.sh  requirements.txt  setup-pmdk.sh  sonar-build-wrapper.sh  sonar-install.ps1  sonar-install.sh  sonar-run.sh  sonar-run.sh.py  sonar-save-login.py
